Modified reflection method so that it will not be affected by obfuscation and remapped jar not required